2010-04-11  Robert Hogan  <robert@webkit.org>

Reviewed by Simon Hausmann.

        [Qt] Update layoutTestController.DumpResourceLoadCallbacks to match other ports.

        Unskip  http/tests/xmlhttprequest/abort-should-cancel-load.html
                http/tests/misc/will-send-request-returns-null-on-redirect.html
                fast/loader/user-style-sheet-resource-load-callbacks.html
                http/tests/misc/window-dot-stop.html
                http/tests/security/XFrameOptions/x-frame-options-deny-meta-tag-parent-same-origin-allow.html
                http/tests/security/XFrameOptions/x-frame-options-deny.html
                http/tests/security/XFrameOptions/x-frame-options-parent-same-origin-allow.html
                http/tests/security/XFrameOptions/x-frame-options-parent-same-origin-deny.html
                http/tests/xmlhttprequest/abort-should-cancel-load.html

        QNetworkReply::OperationCanceledError has a value of 5 rather than -999, so add platform-specific results accordingly.

        Add platform-specific results for the the following, though leave them skipped for now. They've started failing again
        since review was granted (see https://bugs.webkit.org/show_bug.cgi?id=37382):
                http/tests/security/XFrameOptions/x-frame-options-deny-meta-tag-in-body.html
                http/tests/security/XFrameOptions/x-frame-options-deny-meta-tag-parent-same-origin-deny.html
                http/tests/security/XFrameOptions/x-frame-options-deny-meta-tag.html

        https://bugs.webkit.org/show_bug.cgi?id=37237

        * platform/qt/Skipped:
        * platform/qt/http/tests/misc/window-dot-stop-expected.txt: Added.
        * platform/qt/http/tests/security/XFrameOptions/x-frame-options-deny-meta-tag-expected.txt: Added.
        * platform/qt/http/tests/security/XFrameOptions/x-frame-options-deny-meta-tag-in-body-expected.txt: Added.
        * platform/qt/http/tests/security/XFrameOptions/x-frame-options-deny-meta-tag-parent-same-origin-deny-expected.txt: Added.
        * platform/qt/http/tests/xmlhttprequest/abort-should-cancel-load-expected.txt: Added.

2010-04-11  Robert Hogan  <robert@webkit.org>

        Reviewed by Simon Hausmann.

        [Qt] Update layoutTestController.DumpResourceLoadCallbacks to match other ports.

        Unskip  http/tests/xmlhttprequest/abort-should-cancel-load.html
                http/tests/misc/will-send-request-returns-null-on-redirect.html
                fast/loader/user-style-sheet-resource-load-callbacks.html
                http/tests/misc/window-dot-stop.html
                http/tests/security/XFrameOptions/x-frame-options-deny-meta-tag-parent-same-origin-allow.html
                http/tests/security/XFrameOptions/x-frame-options-deny.html
                http/tests/security/XFrameOptions/x-frame-options-parent-same-origin-allow.html
                http/tests/security/XFrameOptions/x-frame-options-parent-same-origin-deny.html
                http/tests/xmlhttprequest/abort-should-cancel-load.html

        QNetworkReply::OperationCanceledError has a value of 5, so update expected results accordingly.

        https://bugs.webkit.org/show_bug.cgi?id=37237

        * WebCoreSupport/FrameLoaderClientQt.cpp:
        (qt_set_will_send_request_returns_null_on_redirect):
        (drtDescriptionSuitableForTestResult):
        (WebCore::FrameLoaderClientQt::dispatchWillSendRequest):
        (WebCore::FrameLoaderClientQt::dispatchDidReceiveResponse):
        (WebCore::FrameLoaderClientQt::dispatchDidFinishLoading):
        (WebCore::FrameLoaderClientQt::dispatchDidFailLoading):

2010-04-11  Robert Hogan  <robert@webkit.org>

        Reviewed by Simon Hausmann.

        [Qt] Update layoutTestController.DumpResourceLoadCallbacks to match other ports.

        Add support for layoutTestController.setWillSendRequestReturnsNullOnRedirect to Qt DRT.
        Prevent dumping resource load callbacks once layout test has dumped.

        https://bugs.webkit.org/show_bug.cgi?id=37237

        * DumpRenderTree/qt/DumpRenderTreeQt.cpp:
        (WebCore::DumpRenderTree::dump):
        * DumpRenderTree/qt/LayoutTestControllerQt.cpp:
        (LayoutTestController::setWillSendRequestReturnsNullOnRedirect):
        * DumpRenderTree/qt/LayoutTestControllerQt.h:

Canonical link: https://commits.webkit.org/48705@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@57416 268f45cc-cd09-0410-ab3c-d52691b4dbfc